--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ PyLeaves==1.0.2
 #--Main----#
 git+https://github.com/MKN-BOTZ/pyrogram 
 aiofiles==22.1.0     
-aiohttp==3.8.3
 tgcrypto==1.2.5
 requests==2.28.2
 bs4==0.0.1
@@ -43,3 +42,6 @@ pytz
 
 
 
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
