--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 #---master---#
 #Telethroid==0.0.10
-PyLeaves==1.0.2
-dnspython==2.3.0
+PyLeaves
+dnspython
 
 #--Main----#
 pyrogram 
-aiofiles==22.1.0     
-tgcrypto==1.2.5
-requests==2.28.2
-bs4==0.0.1
+aiofiles
+tgcrypto
+requests
+bs4
 
 #---database---#
-pymongo[srv]==3.12.3
-marshmallow==3.14.1
-umongo==3.0.1
-motor==2.5.1
+pymongo[srv]
+marshmallow
+umongo
+motor
 
 #---ytdl----#
 youtube-search-python
@@ -25,16 +25,18 @@ yt-dlp==2023.2.17
 git+https://github.com/cinemagoer/cinemagoer
 
 #---others----#
-opencv-python-headless==4.7.0.68
-googletrans==3.1.0a0
-telegraph==2.2.0
-python-dotenv==0.21.1
-gTTS==2.3.1
-speedtest==0.0.1
-humanize==4.6.0
-Pillow==9.4.0
-psutil==5.9.4
+opencv-python-headless
+googletrans
+telegraph
+python-dotenv
+gTTS
+speedtest
+humanize
+Pillow
+psutil
 NumPy
+numpy<2
+opencv-python-headless
 wheel
 ujson
 wget
